# R-Type

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Contributing.md  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  install.bat  install.sh  sever_test  test.db  users.db  vcpkg.json
Client/: CMakeLists.txt  Makefile  cmake_install.cmake
Client/Graphic/: Raylib.cpp  Raylib.hpp
Client/Interface/: I2dEntities.hpp  I3dEntities.hpp  IGraphic.hpp  IMusic.hpp  KeyMap.hpp
Client/config/scenes/: default.json  firstScene.json  testScene.json
Client/src/: Application.cpp  Application.hpp  main.cpp
Client/src/Application/: Application.cpp  Application.hpp
Client/src/ClientSceneManager/: ClientSceneManager.cpp  ClientSceneManager.hpp
Client/src/Component/: ColourComponent.cpp  FontComponent.hpp  MaterialMapComponent.hpp  PathComponent.hpp  Position2DComponent.hpp  Size1DComponent.cpp  Size1DComponent.hpp  TextComponent.cpp  TextComponent.hpp
Client/src/Errors/: ClientErrors.hpp
Client/src/GraphicalLoad/: GraphicalLoad.cpp  GraphicalLoad.hpp
Client/src/Network/: CMakeLists.txt  Network.hpp  NetworkClient.hpp
Client/src/SceneManager/: SceneManager.cpp  SceneManager.hpp
Engine/Client/: CMakeLists.txt
Engine/Client/Interface/: I3dEntities.hpp  IColor.hpp  IFont.hpp  IGraphic.hpp  IShader.hpp  ISound.hpp  IText.hpp  ITexture.hpp
Engine/Server/: CMakeLists.txt
Engine/Server/Src/: main.cpp
Engine/Shared/: CMakeLists.txt
Engine/Shared/Component/: CMakeLists.txt  ColourComponent.hpp  DefaultTextComponent.hpp  DrawComponent.hpp  FontPathComponent.hpp  MaterialMapComponent.hpp  MusicPathComponent.cpp  MusicPathComponent.hpp  MusicPitchComponent.hpp  MusicVolumeComponent.hpp  NetworkConnectionComponent.cpp  NetworkConnectionComponent.hpp  ObjPathComponent.hpp  Position2DComponent.cpp  Position2DComponent.hpp  Position3DComponent.hpp  ScaleComponent.hpp  Size1DComponent.hpp  SoundPathComponent.hpp  SoundPitchComponent.hpp  SoundVolumeComponent.hpp  SpriteSheetAnimationComponent.cpp  SpriteSheetAnimationComponent.hpp  TextComponent.hpp  TextPosition2DComponent.hpp  TexturePathComponent.hpp  TextureRectComponent.cpp  TextureRectComponent.hpp
Engine/Shared/Consumption/: ConsumptionCompute.cpp  ConsumptionCompute.hpp
Engine/Shared/DLLoader/: DLLoader.hpp
Engine/Shared/DefaultComponents/: CMakeLists.txt  IComponent.hpp
Engine/Shared/DefaultEventHandlers/: AEventHandler.cpp  AEventHandler.hpp  CMakeLists.txt  IEventHandler.hpp
Engine/Shared/DefaultSystems/: CMakeLists.txt  ISystem.hpp  ISystemNetworkUpdate.hpp
Engine/Shared/Ecs/: CMakeLists.txt
Engine/Shared/Enum/: StringKeyMap.hpp
Engine/Shared/EventListener/: EventListener.cpp  EventListener.hpp
Engine/Shared/GraphicalLoad/: GraphicalLoad.cpp  GraphicalLoad.hpp
Engine/Shared/Interface/: IComponent.hpp  IError.hpp  IGraphic.hpp  ISystem.hpp  ISystemNetworkUpdate.hpp
Engine/Shared/Network/: CMakeLists.txt
Engine/Shared/SceneManager/: ASceneManager.cpp  ASceneManager.hpp  ISceneManager.hpp
GraphicLibrary/: CMakeLists.txt  GraphicLib.cpp  GraphicLib.hpp
GraphicLibrary/Src/: GraphicLib.cpp  GraphicLib.hpp  test.cpp
Network/: ABINetwork.hpp  CMakeLists.txt
Network/ABI/: ABIClient.cpp  ABIClient.hpp  ABINetwork.cpp  ABINetwork.hpp  ABIServer.cpp  ABIServer.hpp
Network/Database/: Database.cpp  Database.hpp
Network/Errors/: ABIError.hpp  AError.hpp  DbError.hpp  IError.hpp
Network/Messages/: IMessage.hpp
Network/Messages/AMessage/: AMessage.cpp  AMessage.hpp
Network/Messages/AssignToken/: AssignToken.cpp  AssignToken.hpp
Network/Messages/Auth/: Auth.cpp  Auth.hpp
Network/Messages/ChatBox/: ChatBox.cpp  ChatBox.hpp
Network/Messages/CreateEntity/: CreateEntity.cpp  CreateEntity.hpp
Network/Messages/InitMessage/: InitMessage.cpp  InitMessage.hpp
Network/Messages/KeyPressed/: KeyPressed.cpp  KeyPressed.hpp
Network/Messages/Room/: Room.cpp
Network/Messages/RoomMessage/: RoomMessage.cpp  RoomMessage.hpp
Network/Messages/UDPPacket/: UDPPacket.cpp  UDPPacket.hpp
Network/Messages/UpdateComponent/: UpdateComponent.cpp  UpdateComponent.hpp
Network/Units/: INetworkUnit.hpp
Network/Units/ANetworkUnit/: ANetworkUnit.cpp  ANetworkUnit.hpp
Network/Units/Client/: Client.cpp  Client.hpp
Network/Units/Server/: Server.cpp  Server.hpp
Network/User/: User.cpp  User.hpp
QuentinTheFarmerGame/Systems/: CMakeLists.txt
QuentinTheFarmerGame/Systems/Background/: PlanetRestartSystem.cpp  PlanetRestartSystem.hpp  UpdatePlanet.cpp  UpdatePlanet.hpp
QuentinTheFarmerGame/Systems/Ground/: GroundInitSystem.cpp  GroundInitSystem.hpp
QuentinTheFarmerGame/Systems/Hitbox/: HitboxPlayerSystem.cpp
QuentinTheFarmerGame/Systems/Mob/: MobSpeOneInitSystem.cpp  MobSpeOneInitSystem.hpp  MobSpeTwoInitSystem.cpp  MobSpeTwoInitSystem.hpp
QuentinTheFarmerGame/Systems/PlaySounds/: PlaySoundsSystem.cpp
QuentinTheFarmerGame/Systems/Players/: PlayerInitOneSystem.cpp
QuentinTheFarmerGame/Systems/RestartTrees/: TreesInitSystem.cpp
R-TypeGame/: CMakeLists.txt  Makefile  cmake_install.cmake
R-TypeGame/Components/: CMakeLists.txt  Position2DComponent.cpp  Position3DComponent.cpp
R-TypeGame/Error/: IError.hpp
R-TypeGame/EventHandlers/: CMakeLists.txt
R-TypeGame/SystemNetworkUpdate/: CMakeLists.txt
R-TypeGame/Systems/: CMakeLists.txt  MoveSystem.cpp  MoveSystem.hpp
R-TypeGame/components/: CMakeLists.txt  Makefile  Position2DComponent.cpp  Position2DComponent.hpp  Position3DComponent.cpp  PositionComponent.cpp  PositionComponent.hpp  cmake_install.cmake
R-TypeGame/systems/: CMakeLists.txt  MoveSystem.cpp  MoveSystem.hpp
SDL2/: CMakeLists.txt
SDL2/Src/: GraphicLib.cpp  GraphicLib.hpp
Server/: CMakeLists.txt  Makefile  cmake_install.cmake
Server/include/: IComponent.hpp  ISystem.hpp
Server/src/: main.cpp
T-RexGame/: CMakeLists.txt
T-RexGame/EventHandlers/: CMakeLists.txt
T-RexGame/Systems/: CMakeLists.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/Client/: tests.cpp
tests/Server/: tests.cpp
(+834 files in other folders)
